--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,3 +29,17 @@ section#telefone{
     height: 627px;
     background: url(../imagens/frame-iphone.png) no-repeat center fixed;
 }
+
+section#redes-sociais{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 3px;
+}
+
+section#redes-sociais img{
+    border-radius: 100%;
+    width: 50px;
+    height: 50px;
+    border: 1px solid white;
+}
