--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,6 +30,14 @@ section#telefone{
     background: url(../imagens/frame-iphone.png) no-repeat center fixed;
 }
 
+iframe#tela{
+    position: absolute;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
+}
+
 section#redes-sociais{
     display: flex;
     flex-direction: column;
