--- a/estilos/style.css
+++ b/estilos/style.css
@@ -42,12 +42,20 @@ section#redes-sociais{
     display: flex;
     flex-direction: column;
     align-items: end;
-    gap: 3px;
 }
 
 section#redes-sociais img{
-    border-radius: 100%;
+    border-radius: 50%;
     width: 50px;
     height: 50px;
+    margin: 5px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.42);
+    transition: 0.2s;
+}
+
+section#redes-sociais img:hover{
+    translate: -3px -3px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.411);
+    box-sizing: border-box;
     border: 1px solid white;
 }
